[gd_scene load_steps=10 format=3 uid="uid://ch4q32k7uycd7"]

[ext_resource type="Script" path="res://Stage/Stage.gd" id="1_oe0k2"]
[ext_resource type="PackedScene" uid="uid://box4qfmp1mwhd" path="res://Player/player_1.tscn" id="1_vkcv5"]
[ext_resource type="Texture2D" uid="uid://d046b3vbprqky" path="res://Assets/Assets/Pink_Square.png" id="2_e632i"]
[ext_resource type="PackedScene" uid="uid://btqqyktcrmdar" path="res://Opponent/opponent.tscn" id="2_p04be"]
[ext_resource type="PackedScene" uid="uid://d3bnbau462n6" path="res://Ball/ball.tscn" id="3_poq0d"]
[ext_resource type="PackedScene" uid="uid://chudnf1cqb5un" path="res://Player3/Player3.tscn" id="5_pexpm"]
[ext_resource type="PackedScene" uid="uid://dojjhtfmxuwcb" path="res://Player4/Player4.tscn" id="6_8g8be"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8cpa"]
size = Vector2(179.605, 179.605)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8aq2x"]
size = Vector2(166, 635)

[node name="Stage" type="Node"]
script = ExtResource("1_oe0k2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.117647, 0.196078, 1)

[node name="Player1" parent="." instance=ExtResource("1_vkcv5")]
position = Vector2(30, 450)
scale = Vector2(0.9, 0.9)

[node name="player2" parent="." instance=ExtResource("2_p04be")]
position = Vector2(870, 450)
scale = Vector2(0.9, 0.9)

[node name="Ball" parent="." instance=ExtResource("3_poq0d")]
position = Vector2(450, 450)
scale = Vector2(0.9, 0.9)

[node name="Player4" parent="." instance=ExtResource("5_pexpm")]
position = Vector2(450, 30)
scale = Vector2(0.9, 0.9)

[node name="Player3" parent="." instance=ExtResource("6_8g8be")]
position = Vector2(450, 870)
scale = Vector2(0.9, 0.9)

[node name="TopLeftCorner" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftCorner"]
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="TopLeftCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_e632i")

[node name="TopRightCorner" type="StaticBody2D" parent="."]
position = Vector2(900, 0)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightCorner"]
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="TopRightCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_e632i")

[node name="BottomLeftCorner" type="StaticBody2D" parent="."]
position = Vector2(0, 900)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftCorner"]
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="BottomLeftCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_e632i")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(900, 900)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_e632i")

[node name="LeftGoal" type="Area2D" parent="."]
position = Vector2(-164, 138)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2(916, 139)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="TopGoal" type="Area2D" parent="."]
position = Vector2(139, -17)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="BottomGoal" type="Area2D" parent="."]
position = Vector2(138, 1060)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]
[connection signal="body_entered" from="TopGoal" to="." method="_on_top_goal_body_entered"]
[connection signal="body_entered" from="BottomGoal" to="." method="_on_bottom_goal_body_entered"]
